RESOLVED FIXED140980
ExitSiteData saying m_takesSlowPath shouldn't mean early returning takesSlowPath() since for the non-LLInt case we later set m_couldTakeSlowPath, which is more precise
https://bugs.webkit.org/show_bug.cgi?id=140980
Summary ExitSiteData saying m_takesSlowPath shouldn't mean early returning takesSlowP...
Filip Pizlo
Reported 2015-01-27 19:46:58 PST
ExitSiteData saying m_takesSlowPath shouldn't mean early returning takesSlowPath() since for the non-LLInt case we later set m_couldTakeSlowPath, which is more precise
Attachments
Patch (1.63 KB, patch)
2015-01-27 19:47 PST, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2015-01-27 19:47:14 PST
WebKit Commit Bot
Comment 2 2015-01-27 21:48:59 PST
Comment on attachment 245509 [details] Patch Clearing flags on attachment: 245509 Committed r179241: <http://trac.webkit.org/changeset/179241>
WebKit Commit Bot
Comment 3 2015-01-27 21:49:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.