ExitSiteData saying m_takesSlowPath shouldn't mean early returning takesSlowPath() since for the non-LLInt case we later set m_couldTakeSlowPath, which is more precise https://bugs.webkit.org/show_bug.cgi?id=140980

Reviewed by Oliver Hunt.

* bytecode/CallLinkStatus.cpp:
(JSC::CallLinkStatus::computeFor):


Canonical link: https://commits.webkit.org/158968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179241 268f45cc-cd09-0410-ab3c-d52691b4dbfc